# MamadisiBot

./: .gitignore  CMakeLists.txt  EquationSolver.cpp  EquationSolver.h  ImageDownloader.cpp  ImageDownloader.h  MamadisiBot.cpp  MamadisiBot.h  README.md  main.cpp  mamadisibot.service
docs/: dconfig
setup/: ddbb.sql
